fix: 로또 생성 로직 수정
- 로또는 출력시에만 정렬해야 하므로 생성자에서 정렬 제거